--- a/android/apps/sendfiles/AndroidManifest.xml
+++ b/android/apps/sendfiles/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:label="@string/app_name"
         android:theme="@android:style/Theme.DeviceDefault.Dialog" >
         <activity
-            android:name=".SendFilesActivity"
+            android:name=".ComposeSendFilesActivity"
             android:excludeFromRecents="true" >
          
             <intent-filter>
