--- a/android/apps/sendpics/AndroidManifest.xml
+++ b/android/apps/sendpics/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:theme="@android:style/Theme.DeviceDefault.Dialog" >
        
        <activity
-            android:name=".SendPicsActivity"
+            android:name=".ComposeSendPicsActivity"
             android:excludeFromRecents="true"
             android:label="@string/app_name" >
             <intent-filter>
@@ -31,7 +31,7 @@
         </activity>
 
         <activity
-            android:name=".ReceivePicsActivity"
+            android:name=".ViewSendPicsActivity"
             android:excludeFromRecents="true"
             android:label="@string/title_activity_receive_pics" >
             
