--- a/android/apps/sendfiles/AndroidManifest.xml
+++ b/android/apps/sendfiles/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:targetSdkVersion="19" />
     
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
-
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>    
+    
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
