--- a/android/android.main/build.gradle
+++ b/android/android.main/build.gradle
@@ -13,16 +13,15 @@ buildscript {
 }
 
 dependencies {
-    compile('me.sneer:core:0.0.1') // Comment this line to run with the core simulator.
+    compile('me.sneer:core:0.0.1') {    // Comment this block to run with the core simulator.
+       exclude group:'org.bouncycastle'
+    }
     compile 'com.google.android:support-v4:r7'
     compile project(':android-api')
+    
 }
 
 android {
-
-	dexOptions {
-        jumboMode = true
-    }
 
 	lintOptions {
 		abortOnError false
