--- a/android/apps/sendpics/AndroidManifest.xml
+++ b/android/apps/sendpics/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:theme="@android:style/Theme.DeviceDefault.Dialog" >
        
        <activity
-            android:name=".ComposeSendPicsActivity"
+            android:name=".SendPicsActivity"
             android:excludeFromRecents="true"
             android:label="@string/app_name" >
             <intent-filter>
