--- a/android/android.main/AndroidManifest.xml
+++ b/android/android.main/AndroidManifest.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+
     package="sneer.android.main"
-    android:installLocation="internalOnly"
     android:versionCode="4"
-    android:versionName="1.0" >
+    android:versionName="1.0"
+    
+    android:installLocation="internalOnly">
 
     <uses-sdk
         android:minSdkVersion="16"
@@ -17,15 +19,17 @@
 
     <application
         android:name=".SneerApp"
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
+        
         <receiver android:name=".SneerBroadcastReceiver" >
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
+        
         <receiver
             android:name=".ipc.PluginMonitor"
             android:enabled="true"
@@ -38,27 +42,6 @@
             </intent-filter>
         </receiver>
 
-        <activity
-            android:name=".ui.MainActivity"
-            android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".ui.ConversationActivity"
-            android:label="@string/title_conversation" >
-        </activity>
-        <activity
-            android:name=".ui.ProfileActivity"
-            android:label="@string/title_activity_profile" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="sneer.android.main.ui.MainActivity" />
-        </activity>
-
         <service
             android:name=".ipc.TupleSpaceService"
             android:exported="true" >
@@ -66,6 +49,28 @@
                 <action android:name="sneer.android.service.TUPLE_SPACE" />
             </intent-filter>
         </service>
+        
+        <activity
+            android:name=".ui.MainActivity"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        
+        <activity
+            android:name=".ui.ConversationActivity"
+            android:label="@string/title_conversation" >
+        </activity>
+        
+        <activity
+            android:name=".ui.ProfileActivity"
+            android:label="@string/title_activity_profile" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="sneer.android.main.ui.MainActivity" />
+        </activity>
 
         <activity
             android:name=".ui.SystemReportActivity"
@@ -75,25 +80,24 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="sneer.android.main.ui.MainActivity" />
         </activity>
+        
         <activity
-            android:name="sneer.android.main.ui.ContactActivity"
+            android:name=".ui.ContactActivity"
             android:label="@string/title_activity_contact" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="sneer.android.main.ui.MainActivity" />
-
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
-
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-
                 <data
                     android:host="sneer.me"
                     android:pathPrefix="/public-key"
                     android:scheme="http" />
             </intent-filter>
         </activity>
+        
     </application>
 
 </manifest>
