--- a/android/android.main/AndroidManifest.xml
+++ b/android/android.main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <receiver android:name=".SneerBroadcastReceiver" >
+        <receiver android:name=".SneerBoot" >
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
