--- a/android/android.main.tests/build.gradle
+++ b/android/android.main.tests/build.gradle
@@ -17,6 +17,7 @@ configurations {
 
 dependencies {
     libs 'com.netflix.rxjava:rxjava-android:' + external.rx.version
+    androidTestCompile 'com.jayway.android.robotium:robotium-solo:5.2.1'
     compile project(':android.main')
     compile ('me.sneer:core.tests:0.0.1') {
        exclude group:'org.bouncycastle'
