--- a/android/android.main.tests/build.gradle
+++ b/android/android.main.tests/build.gradle
@@ -10,19 +10,16 @@ buildscript {
     }
 }
 
-configurations {
-  libs
-  compile.extendsFrom libs
-}
 
 dependencies {
-    libs 'com.netflix.rxjava:rxjava-android:' + external.rx.version
-    androidTestCompile 'com.jayway.android.robotium:robotium-solo:5.2.1'
+    compile 'com.netflix.rxjava:rxjava-android:' + external.rx.version
+    compile 'com.jayway.android.robotium:robotium-solo:5.2.1'
     compile project(':android.main')
     compile ('me.sneer:core.tests:0.0.1') {
        exclude group:'org.bouncycastle'
     }
 }
+
 
 android {
 
@@ -55,4 +52,8 @@ android {
             assets.srcDirs = ['assets']
         }
     }
+}
+
+afterEvaluate {
+	compileDebugJava.dependsOn ':android.main:compileDebugJava'
 }
