:arrow_up: Bump gradle wrapper to 2.2, android.tools.build:gradle to 0.14.+, android sdkVersion to 21 and android buildToolsVersion to 21.1.1. It was not possible to break this in several commits as it would break the build. It's all or nothing :smiley:

--- a/android/android-api/build.gradle
+++ b/android/android-api/build.gradle
@@ -13,7 +13,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.10.0+'
+        classpath 'com.android.tools.build:gradle:0.14.+'
     }
 }
 
@@ -104,7 +104,7 @@ android.libraryVariants.all { variant ->
 	}
 
 	task sourcesJar(type: Jar) {
-        from variant.javaCompile.source
+    from variant.javaCompile.source
 	    classifier = 'sources'
 	}
 
@@ -116,7 +116,5 @@ android.libraryVariants.all { variant ->
 	}
 
 }
-
-
 
 defaultTasks 'copyLibs'
