--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,3 +1,3 @@
 include 'android-api', 'android.main'
 include 'apps:sendpics', 'apps:voicemessage', 'apps:sendlocation', 'apps:sendfiles'
-//include 'android.main.tests'
+include 'android.main.tests'
