--- a/android/android-api/AndroidManifest.xml
+++ b/android/android-api/AndroidManifest.xml
@@ -11,8 +11,6 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <library />
-    <application
-        android:allowBackup="true"
-        android:label="SNAPI">
+    <application>
     </application>
 </manifest>
