--- a/android/android.main/build.gradle
+++ b/android/android.main/build.gradle
@@ -36,6 +36,8 @@ android {
     defaultConfig {
         minSdkVersion external.android.minSdkVersion
         targetSdkVersion external.android.sdkVersion
+        //testPackageName "sneer.android"
+        testInstrumentationRunner "android.test.InstrumentationTestRunner"
     }
 
     sourceSets {
@@ -47,6 +49,13 @@ android {
             renderscript.srcDirs = ['src']
             res.srcDirs = ['res']
             assets.srcDirs = ['assets']
+        }
+        instrumentTest {
+            java.srcDirs = ['tests/src']
+            manifest.srcFile file('tests/AndroidManifest.xml')
+            resources.srcDirs = ['tests/src']
+            res.srcDirs = ['tests/res']
+            assets.srcDirs = ['tests/assets']
         }
     }
 }
