--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 ext {
     external = [
-        'rx': [version: '0.20.3']
+        'rx': [version: '0.20.3'],
+        'clojure.core.match': 'org.clojure:core.match:0.2.2'
     ]
 }
 
