--- a/server/build.gradle
+++ b/server/build.gradle
@@ -43,7 +43,7 @@ eclipse.project {
 dependencies {
     compile 'org.clojure:clojure:1.6.0'
     compile 'org.clojure:core.async:0.1.303.0-886421-alpha'
-    compile 'org.clojure:core.match:0.2.1'
+    compile external['clojure.core.match']
     compile project(':core')
     testCompile 'midje:midje:1.6.3'
 }
