--- a/android/build.gradle
+++ b/android/build.gradle
@@ -20,6 +20,7 @@ buildscript {
 
 allprojects {
     group = 'me.sneer'
+    apply plugin: 'idea'
     repositories {
         mavenCentral()
         mavenLocal()
