--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ buildscript {
 
 allprojects {
     group = 'me.sneer'
+    apply plugin: 'idea'
     repositories {
         mavenCentral()
     }
