--- a/core/build.gradle
+++ b/core/build.gradle
@@ -66,7 +66,7 @@ dependencies {
     compile project(':crypto')
     compile project(':java-api')
     testCompile 'midje:midje:1.6.3'
-    optional 'org.clojure:java.jdbc:0.3.6'
+    compile 'org.clojure:java.jdbc:0.3.6'
     optional 'org.xerial:sqlite-jdbc:3.8.6'
 }
 
