--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,5 +1,5 @@
-include 'android-api', 'android.main'
-include 'apps:sendpics', 'apps:voicemessage', 'apps:sendlocation', 'apps:sendfiles'
+include ':android-api', ':android.main'
+include ':apps:sendpics', ':apps:voicemessage', ':apps:sendlocation', ':apps:sendfiles'
 
 include ':lizardspock'
 project(':lizardspock').projectDir=new File('../../lizardspock')
