WIP add projects core, core.tests and server to Android Studio project

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,6 +4,7 @@ import org.gradle.api.artifacts.*;
 ext {
   external = [
     rx: [version: '0.20.3'],
+    'clojure.core.match': 'org.clojure:core.match:0.2.2',
     android: [
         sdkVersion: 21,
         minSdkVersion: 16,
