--- a/server/build.gradle
+++ b/server/build.gradle
@@ -39,6 +39,7 @@ eclipse.project {
 }
 
 dependencies {
+    compile 'http-kit:http-kit:2.1.19'
     compile 'org.clojure:clojure:1.6.0'
     compile 'org.clojure:core.async:0.1.303.0-886421-alpha'
     compile external['clojure.core.match']
