--- a/android/android.main/AndroidManifest.xml
+++ b/android/android.main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionCode="4"
     android:versionName="1.0" >
 
-    <uses-sdk
+<uses-sdk
         android:minSdkVersion="16"
         android:targetSdkVersion="21" />
 
@@ -15,12 +15,28 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+
+    <permission android:name="sneer.android.permission.C2D_MESSAGE"
+                android:protectionLevel="signature" />
+    <uses-permission android:name="sneer.android.permission.C2D_MESSAGE" />
+
     <application
         android:name=".SneerApp"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+
+        <receiver
+            android:name=".GcmBroadcastReceiver">
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+                <category android:name="sneer.android" />
+            </intent-filter>
+        </receiver>
+
         <receiver android:name=".SneerBoot" >
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
