--- a/android/android-api/build.gradle
+++ b/android/android-api/build.gradle
@@ -25,7 +25,7 @@ configurations {
 dependencies {
     libs 'com.netflix.rxjava:rxjava-android:' + external.rx.version
     compile 'org.ocpsoft.prettytime:prettytime:3.2.5.Final'
-    compile 'me.sneer:java-api:+'
+    compile project(':java-api')
 }
 
 android {
