--- a/android/android.main/build.gradle
+++ b/android/android.main/build.gradle
@@ -16,7 +16,9 @@ dependencies {
 //    compile 'com.google.android:support-v4:r7' //play-services-base below includes support-v4:22
     compile 'com.google.android.gms:play-services-base:6.5.87' //For GCM (Google Cloud Messaging)
     compile project(':android-api')
-    compile project(':core')
+    compile(project(':core')) {
+        exclude group: 'org.bouncycastle'
+    }
 }
 
 android {
