WIP organizing gradle project structure

--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,16 @@
+import java.nio.file.*;
+import org.gradle.api.artifacts.*;
+
 ext {
-    external = [
-        'rx': [version: '0.20.3'],
-        'clojure.core.match': 'org.clojure:core.match:0.2.2'
+  external = [
+    rx: [version: '0.20.3'],
+    'clojure.core.match': 'org.clojure:core.match:0.2.2',
+    android: [
+        sdkVersion: 21,
+        minSdkVersion: 16,
+        buildToolsVersion: '21.1.1'
     ]
+  ]
 }
 
 buildscript {
@@ -16,5 +24,6 @@ allprojects {
     apply plugin: 'idea'
     repositories {
         mavenCentral()
+        mavenLocal()
     }
 }
