--- a/android/android.main/AndroidManifest.xml
+++ b/android/android.main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="sneer.android"
     android:installLocation="internalOnly"
     android:versionCode="4"
-    android:versionName="1.0" >
+    android:versionName="1.0">
 
     <uses-feature android:name="android.hardware.camera" />
 
@@ -14,8 +14,9 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
 
-    <permission android:name="sneer.android.permission.C2D_MESSAGE"
-                android:protectionLevel="signature" />
+    <permission
+        android:name="sneer.android.permission.C2D_MESSAGE"
+        android:protectionLevel="signature" />
     <uses-permission android:name="sneer.android.permission.C2D_MESSAGE" />
 
     <application
@@ -23,17 +24,16 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
 
-        <receiver
-            android:name=".GcmBroadcastReceiver">
+        <receiver android:name=".GcmBroadcastReceiver">
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
                 <category android:name="sneer.android" />
             </intent-filter>
         </receiver>
 
-        <receiver android:name=".SneerBoot" >
+        <receiver android:name=".SneerBoot">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
@@ -41,7 +41,7 @@
         <receiver
             android:name=".ipc.PluginMonitor"
             android:enabled="true"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <data android:scheme="package" />
 
@@ -52,18 +52,19 @@
 
         <service
             android:name=".ipc.TupleSpaceService"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="sneer.android.service.TUPLE_SPACE" />
             </intent-filter>
         </service>
 
-        <meta-data android:name="com.google.android.gms.version"
+        <meta-data
+            android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
         <activity
             android:name=".ui.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -72,11 +73,10 @@
         </activity>
         <activity
             android:name=".ui.ConversationActivity"
-            android:label="@string/title_conversation" >
-        </activity>
+            android:label="@string/title_conversation"></activity>
         <activity
             android:name=".ui.ProfileActivity"
-            android:label="@string/title_activity_profile" >
+            android:label="@string/title_activity_profile">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="sneer.android.ui.MainActivity" />
@@ -84,14 +84,14 @@
         <activity
             android:name=".ui.SystemReportActivity"
             android:label="@string/title_activity_system_report"
-            android:parentActivityName=".ui.MainActivity" >
+            android:parentActivityName=".ui.MainActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="sneer.android.ui.MainActivity" />
         </activity>
         <activity
             android:name=".ui.ContactActivity"
-            android:label="@string/title_activity_contact" >
+            android:label="@string/title_activity_contact">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="sneer.android.ui.MainActivity" />
