--- a/android/apps/voicemessage/AndroidManifest.xml
+++ b/android/apps/voicemessage/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="sneer.android.voicemessage" 
+    package="sneer.android.voicemessage"
     android:screenOrientation="portrait"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="1.0">
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
@@ -12,31 +12,45 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.DeviceDefault.Dialog" >
+        android:theme="@android:style/Theme.DeviceDefault.Dialog">
         <activity
             android:name=".VoiceMessageActivity"
             android:excludeFromRecents="true"
-            android:label="@string/title_activity_voice_message" >
+            android:label="@string/title_activity_voice_message">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
             </intent-filter>
 
-            <meta-data android:name="sneer:plugin-type" android:value="MESSAGE/COMPOSE" />
-            <meta-data android:name="sneer:tuple-type" android:value="audio/3gp" />
-            <meta-data android:name="sneer:menu-caption" android:value="Voice Message" />
-            <meta-data android:name="sneer:menu-icon" android:resource="@drawable/ic_launcher" />
+            <meta-data
+                android:name="sneer:plugin-type"
+                android:value="MESSAGE/COMPOSE" />
+            <meta-data
+                android:name="sneer:tuple-type"
+                android:value="audio/3gp" />
+            <meta-data
+                android:name="sneer:menu-caption"
+                android:value="Voice Message" />
+            <meta-data
+                android:name="sneer:menu-icon"
+                android:resource="@drawable/ic_launcher" />
         </activity>
         <activity
             android:name=".ViewVoiceMessageActivity"
             android:excludeFromRecents="true"
-            android:label="@string/title_activity_view_voice_message" >
+            android:label="@string/title_activity_view_voice_message">
             <intent-filter>
-		        <action android:name="android.intent.action.VIEW" />
-		    </intent-filter>
-            
-            <meta-data android:name="sneer:plugin-type" android:value="MESSAGE/VIEW" />
-            <meta-data android:name="sneer:tuple-type" android:value="audio/3gp" />
-            <meta-data android:name="sneer:menu-icon" android:resource="@drawable/ic_launcher" />
+                <action android:name="android.intent.action.VIEW" />
+            </intent-filter>
+
+            <meta-data
+                android:name="sneer:plugin-type"
+                android:value="MESSAGE/VIEW" />
+            <meta-data
+                android:name="sneer:tuple-type"
+                android:value="audio/3gp" />
+            <meta-data
+                android:name="sneer:menu-icon"
+                android:resource="@drawable/ic_launcher" />
         </activity>
     </application>
 
