add apps:sendvideo to settings.gradle

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,16 +1,16 @@
 include ':android-api'
-project(':android-api').projectDir=new File('android/android-api')
+project(':android-api').projectDir = new File('android/android-api')
 
 include ':android:android.main'
 
 include ':android.main.tests'
-project(':android.main.tests').projectDir=new File('android/android.main/tests')
+project(':android.main.tests').projectDir = new File('android/android.main/tests')
 
 include 'android:apps:sendpics',
-        'android:apps:sendpics',
         'android:apps:voicemessage',
         'android:apps:sendlocation',
-        'android:apps:sendfiles'
+        'android:apps:sendfiles',
+        'android:apps:sendvideo'
 
 include ':java-api',
         ':crypto',
