--- a/java-api/build.gradle
+++ b/java-api/build.gradle
@@ -4,6 +4,8 @@ apply plugin: 'maven'
 
 version = '0.0.1'
 
+apply from: '../sonatype.gradle'
+
 sourceCompatibility = 1.6
 targetCompatibility = 1.6
 
