--- a/android/android.main/build.gradle
+++ b/android/android.main/build.gradle
@@ -16,7 +16,8 @@ apply plugin: 'android-sdk-manager'
 apply plugin: 'com.android.application'
 
 dependencies {
-    compile 'com.google.android.gms:play-services-base:6.5.87' //For GCM (Google Cloud Messaging)
+//  compile 'com.google.android.gms:play-services-base:6.5.87' //For GCM (Google Cloud Messaging)
+    compile 'com.google.android.gms:play-services-base:6+' //For GCM (Google Cloud Messaging)
     compile project(':android-api')
     compile(project(':core')) {
         exclude group: 'org.bouncycastle'
