--- a/android/apps/sendfiles/build.gradle
+++ b/android/apps/sendfiles/build.gradle
@@ -14,7 +14,7 @@ buildscript {
 
 dependencies {
     compile 'com.google.android:support-v4:r7'
-    compile project(':android-api')
+    compile project(':sneer-android-api')
 }
 
 
