--- a/java-api.tests/build.gradle
+++ b/java-api.tests/build.gradle
@@ -12,7 +12,7 @@ sourceSets {
 
 dependencies {
     compile 'junit:junit:4.11'
-    compile project(':java-api')
+    compile project(':sneer-java-api')
 }
 
 uploadArchives {
