--- a/crypto/build.gradle
+++ b/crypto/build.gradle
@@ -13,7 +13,7 @@ repositories {
 
 dependencies {
 
-    compile project(':java-api')
+    compile project(':sneer-java-api')
 
     testCompile 'junit:junit:4.11'
 
