--- a/android/android.main/AndroidManifest.xml
+++ b/android/android.main/AndroidManifest.xml
@@ -12,8 +12,9 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
 
+    <!-- GCM (Google Cloud Messages) -->
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
     <permission
         android:name="sneer.android.permission.C2D_MESSAGE"
         android:protectionLevel="signature" />
