--- a/java-api/build.gradle
+++ b/java-api/build.gradle
@@ -18,3 +18,18 @@ dependencies {
     compile 'com.netflix.rxjava:rxjava-core:' + external.rx.version
     compile 'org.ocpsoft.prettytime:prettytime:3.2.5.Final'
 }
+
+task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+
+artifacts {
+    archives sourcesJar
+    archives javadocJar
+}
