--- a/android/android-api/build.gradle
+++ b/android/android-api/build.gradle
@@ -1,8 +1,6 @@
 apply plugin: 'android-library'
 
-def originalVersion = '0.1.3'
-
-version = originalVersion
+version = '0.1.4'
 description = 'API for Sneer, the sovereign platform.'
 ext.packaging = 'jar'
 
