:fire: build.gradle cleanups WIP

--- a/build.gradle
+++ b/build.gradle
@@ -12,15 +12,19 @@ ext {
 
 buildscript {
     repositories {
-        mavenCentral()
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:1.0.0'
+
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
     }
 }
 
 allprojects {
     group = 'me.sneer'
-    apply plugin: 'idea'
     repositories {
-        mavenCentral()
-        mavenLocal()
+        jcenter()
     }
 }
