--- a/android/android.main/build.gradle
+++ b/android/android.main/build.gradle
@@ -1,19 +1,11 @@
 apply plugin: 'com.android.application'
 
-dependencies {
-    compile 'com.google.android.gms:play-services-base:6+' //For GCM (Google Cloud Messaging)
-    compile 'com.netflix.rxjava:rxjava-android:' + external.rx.version
-    compile project(':sneer-android-api')
-    compile project(':sneer-java-api')
-    compile(project(':core')) { exclude group: 'org.bouncycastle' }
-}
-
 android {
 
     lintOptions {
         abortOnError false
     }
-
+    
     packagingOptions {
         exclude 'META-INF/LICENSE'
         exclude 'META-INF/NOTICE'
@@ -25,15 +17,23 @@ android {
     defaultConfig {
         minSdkVersion external.android.minSdkVersion
         targetSdkVersion external.android.sdkVersion
+        applicationId "sneer.android"
+        versionCode 1
+        versionName "1.0"
     }
 
-    sourceSets {
-        main {
-            manifest.srcFile 'AndroidManifest.xml'
-            java.srcDirs = ['src']
-            resources.srcDirs = ['src']
-            res.srcDirs = ['res']
-            assets.srcDirs = ['assets']
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+}
+
+dependencies {
+    compile 'com.google.android.gms:play-services-base:6+' //For GCM (Google Cloud Messaging)
+    compile 'com.netflix.rxjava:rxjava-android:' + external.rx.version
+    compile project(':sneer-android-api')
+    compile project(':sneer-java-api')
+    compile(project(':core')) { exclude group: 'org.bouncycastle' }
 }
