--- a/android/android-api/build.gradle
+++ b/android/android-api/build.gradle
@@ -1,4 +1,4 @@
-apply plugin: 'android-library'
+apply plugin: 'com.android.library'
 
 version = '0.1.4'
 description = 'API for Sneer, the sovereign platform.'
@@ -12,8 +12,7 @@ configurations {
 }
 
 android {
-
-    lintOptions {
+  lintOptions {
         abortOnError false
     }
 
@@ -23,13 +22,13 @@ android {
     defaultConfig {
         minSdkVersion external.android.minSdkVersion
         targetSdkVersion external.android.sdkVersion
+        versionCode 1
+        versionName "1.0"
     }
-
-    sourceSets {
-        main {
-            manifest.srcFile 'AndroidManifest.xml'
-            java.srcDir 'src'
-            res.srcDir 'res'
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 }
