travis: specify android tools version

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: android
-# jdk:
-#   - oraclejdk8
-#   - oraclejdk7
-#   - openjdk7
-#   - openjdk6
+android:
+  components:
+    - build-tools-21.1.1
+    - android-21
+    - extra
