--- a/java-api/build.gradle
+++ b/java-api/build.gradle
@@ -27,5 +27,5 @@ task javadocJar(type: Jar, dependsOn: javadoc) {
 
 artifacts {
   archives sourcesJar
-  archives javadocJar
+//  archives javadocJar
 }
