--- a/java-api/build.gradle
+++ b/java-api/build.gradle
@@ -2,6 +2,8 @@ apply plugin: 'java'
 apply plugin: 'maven'
 
 version = '0.1.5'
+sourceCompatibility = 1.6
+targetCompatibility = 1.6
 
 apply from: '../sonatype.gradle'
 
