--- a/crypto/build.gradle
+++ b/crypto/build.gradle
@@ -3,6 +3,9 @@ version = "0.1.5"
 apply plugin: "java"
 apply plugin: "maven"
 
+sourceCompatibility = 1.6
+targetCompatibility = 1.6
+
 dependencies {
   compile project(':sneer-java-api')
   testCompile 'junit:junit:4.11'
