prepare project for lein-skummet compilation basically by moving protocols, macros and usages of Clojure.var out of the way

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -45,6 +45,8 @@ sourceSets {
   }
 }
 
+compileClojure.mustRunAfter compileJava
+
 eclipse.project {
   natures 'ccw.nature'
   buildCommand 'ccw.builder'
