PluginMonitor: :bug: Filtering sneer apps by an additional meta-data so initial discovery doesn't throw transactionTooLargeException anymore.

--- a/android/apps/sendlocation/src/main/AndroidManifest.xml
+++ b/android/apps/sendlocation/src/main/AndroidManifest.xml
@@ -32,6 +32,9 @@
                 android:name="sneer:menu-icon"
                 android:resource="@drawable/ic_launcher" />
         </activity>
-    </application>
 
+        <meta-data
+            android:name="sneer:app-type"
+            android:value="plugin"/>
+    </application>
 </manifest>
