--- a/android/apps/sendpics/AndroidManifest.xml
+++ b/android/apps/sendpics/AndroidManifest.xml
@@ -33,5 +33,8 @@
                 android:name="sneer:menu-icon"
                 android:resource="@drawable/ic_launcher" />
         </activity>
+        <meta-data
+            android:name="sneer:app-type"
+            android:value="plugin"/>
     </application>
 </manifest>
