--- a/android/apps/sendvideo/AndroidManifest.xml
+++ b/android/apps/sendvideo/AndroidManifest.xml
@@ -30,11 +30,14 @@
             <intent-filter>
 		        <action android:name="android.intent.action.VIEW" />
 		    </intent-filter>
-            
+
             <meta-data android:name="sneer:plugin-type" android:value="MESSAGE/VIEW" />
             <meta-data android:name="sneer:tuple-type" android:value="video" />
             <meta-data android:name="sneer:menu-icon" android:resource="@drawable/ic_launcher" />
         </activity>
+        <meta-data
+            android:name="sneer:app-type"
+            android:value="plugin"/>
     </application>
 
 </manifest>
