--- a/android/apps/voicemessage/AndroidManifest.xml
+++ b/android/apps/voicemessage/AndroidManifest.xml
@@ -52,6 +52,9 @@
                 android:name="sneer:menu-icon"
                 android:resource="@drawable/ic_launcher" />
         </activity>
+        <meta-data
+            android:name="sneer:app-type"
+            android:value="plugin"/>
     </application>
 
 </manifest>
