--- a/android/apps/sendpics/AndroidManifest.xml
+++ b/android/apps/sendpics/AndroidManifest.xml
@@ -33,8 +33,9 @@
                 android:name="sneer:menu-icon"
                 android:resource="@drawable/ic_launcher" />
         </activity>
+        
         <meta-data
-            android:name="sneer:app-type"
-            android:value="plugin"/>
+            android:name="SneerApp"
+            android:value=""/>
     </application>
 </manifest>
